Fixed bug with header overflowing vertically

--- a/styles/style.css
+++ b/styles/style.css
@@ -39,6 +39,7 @@ body, html
     padding-right: 25px;
     padding-bottom: 10px;
     overflow: hidden;
+    min-height: 165px;
 }
 
 .header-container-1
